# modern-etl-pipeline

./: .gitignore  README.md  config.yaml  docker-compose.yaml  pyproject.toml
airflow/dags/: pipeline.py
ops/: extract.py  session.py
tools/: log.py
