[project]
name = "modern-etl-pipeline"
version = "1.0.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "pyspark (>=4.0.1,<5.0.0)",
    "yfinance (>=0.2.66,<0.3.0)",
    "streamlit (>=1.50.0,<2.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "delta-spark (>=4.0.0,<5.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
]

[[tool.poetry.packages]]
include = "tools"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
